src/objects/T_Schedule_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PBS_Authorization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PBS_Authorization</label>
        <referenceTo>Authorization__c</referenceTo>
        <relationshipLabel>T_Schedule_Details</relationshipLabel>
        <relationshipName>T_Schedule_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pickup_Dropoff_Address__c</fullName>
        <label>Pickup/Dropoff Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scheduled_Entity_Status__c</fullName>
        <label>Scheduled_Entity_Status</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arrived At Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Walked Out From Facility</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>T_Schedule__c</fullName>
        <label>T_Schedule</label>
        <referenceTo>T_Schedule__c</referenceTo>
        <relationshipLabel>T_Schedule_Details</relationshipLabel>
        <relationshipName>T_Schedule_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>What_Id_Type__c</fullName>
        <label>What_Id_Type</label>
        <picklist>
            <picklistValues>
                <fullName>Driver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PersonBeingServed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_Id__c</fullName>
        <label>What_Id</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>T_Schedule_Detail</label>
    <listViews>
        <fullName>schDetail</fullName>
        <columns>NAME</columns>
        <columns>T_Schedule__c</columns>
        <columns>Date__c</columns>
        <columns>What_Id_Type__c</columns>
        <columns>What_Id__c</columns>
        <columns>Scheduled_Entity_Status__c</columns>
        <columns>PBS_Authorization__c</columns>
        <columns>Pickup_Dropoff_Address__c</columns>
        <columns>Special_Instructions__c</columns>
        <columns>Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>schDetail</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>T_Schedule_Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>